--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "scripts": {
+        "install": "(npm list -g ts-node || npm install -g ts-node) > /dev/null 2>&1 && ts-node scripts/install.ts",
+        "dev": "deno run --allow-all scripts/dev.ts",
         "deploy": "nbgv tag && git push origin --tags"
     }
 }
