--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
     "tasks": {
         "dev": "deno run --allow-all scripts/dev.ts"
-    }
+    },
+    "exclude": ["scripts/install.ts", "src/frontend/src/**"]
 }
