--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-api": "openapi-generator-cli generate -i http://localhost:5190/swagger/v1/swagger.json -g typescript-axios -o ./src/api-client"
   },
   "dependencies": {
     "react": "^18.3.1",
