--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,19 +2,28 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run npm dev",
+            "label": "Run npm run dev",
             "type": "shell",
             "command": "npm run dev",
-            "problemMatcher": [],
             "isBackground": true,
+            "problemMatcher": {
+                "owner": "custom",
+                "pattern": [
+                    {
+                        "regexp": ".",
+                        "file": 1,
+                        "location": 2,
+                        "message": 3
+                    }
+                ],
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "Now listening on:",
+                    "endsPattern": "Shutting down..."
+                }
+            },
             "options": {
                 "cwd": "${workspaceFolder}"
-            },
-            "presentation": {
-                "reveal": "always"
-            },
-            "runOptions": {
-                "runOn": "folderOpen"
             }
         }
     ]
