Fixed tasks and launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,8 @@
             "type": "coreclr",
             "request": "attach",
             "processName": "Base",
-            "preLaunchTask": "Run npm run dev"
+            "preLaunchTask": "Run npm run dev",
+            "postDebugTask": "Terminate All Tasks"
         }
-    ],
+    ]
 }
