--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,18 +13,40 @@
                         "regexp": ".",
                         "file": 1,
                         "location": 2,
-                        "message": 3
+                        "severity": 3,
+                        "code": 4,
+                        "message": 5
                     }
                 ],
                 "background": {
                     "activeOnStart": true,
-                    "beginsPattern": "All services are ready!",
-                    "endsPattern": "Shutting down..."
+                    "beginsPattern": "Starting services...",
+                    "endsPattern": "All services are ready"
                 }
             },
             "options": {
                 "cwd": "${workspaceFolder}"
             }
+        },
+        {
+            "label": "Terminate All Tasks",
+            "type": "shell",
+            "windows": {
+                "command": "wsl -e kill -SIGINT $(wsl -e pgrep -f 'deno.*dev.ts')",
+                "options": {
+                    "shell": {
+                        "executable": "cmd.exe",
+                        "args": ["/c"]
+                    }
+                }
+            },
+            "linux": {
+                "command": "kill -SIGINT $(pgrep -f 'deno.*dev.ts')"
+            },
+            "osx": {
+                "command": "kill -SIGINT $(pgrep -f 'deno.*dev.ts')"
+            },
+            "problemMatcher": []
         }
     ]
 }
