--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "vite",
+    "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.79.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@tanstack/router-plugin": "^1.79.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "glob": "^11.0.0",
     "vite": "^5.4.8"
   },
   "dependencies": {
