--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "glob": "^11.0.0",
+    "swagger-typescript-api": "^13.0.22",
     "vite": "^5.4.8"
   },
   "dependencies": {
