--- a/frontend/tsconfig.modules.json
+++ b/frontend/tsconfig.modules.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "paths": {
-            "@/*": [
+            "@template/*": [
                 "../modules/template/frontend/src/*"
             ]
         }
