--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "typecheck": "tsc --noEmit",
-    "dev": "vite --port=3001",
-    "build": "vite build",
-    "serve": "vite preview",
-    "start": "vite"
-  },
-  "devDependencies": {
-    "@tanstack/router-plugin": "^1.79.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "glob": "^11.0.0",
-    "swagger-typescript-api": "^13.0.22",
-    "vite": "^5.4.8"
-  },
-  "dependencies": {
-    "@tanstack/react-router": "^1.79.0",
-    "@tanstack/router-devtools": "^1.79.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+    "name": "frontend",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "typecheck": "tsc --noEmit",
+        "dev": "vite --port=3001",
+        "build": "vite build",
+        "serve": "vite preview",
+        "start": "vite"
+    },
+    "devDependencies": {
+        "@tanstack/router-plugin": "^1.79.0",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.2",
+        "glob": "^11.0.0",
+        "swagger-typescript-api": "^13.0.22",
+        "vite": "^5.4.8",
+        "@repo/config": "*"
+    },
+    "dependencies": {
+        "@repo/template": "*",
+        "@tanstack/react-router": "^1.79.0",
+        "@tanstack/router-devtools": "^1.79.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    }
 }
