--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,12 +1,4 @@
 {
-    "extends": "./tsconfig.modules.json",
-    "include": ["../modules/*/frontend/src/*", "."],
-    "compilerOptions": {
-        "strict": true,
-        "esModuleInterop": true,
-        "jsx": "preserve",
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "Bundler"
-    }
-}   
+    "extends": "@repo/config/react.json",
+    "include": ["src"]
+}
