--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.1" />
+    <PackageReference Include="Serilog" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
