--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "GoogleCloud": {
+        "Region": "west-europe3",
+        "ProjectId": "compozerr",
+        "RepositoryName": "compozerr"
     }
-  }
 }
