--- a/modules/cli/backend/Cli/Cli.csproj
+++ b/modules/cli/backend/Cli/Cli.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>190c9cd0-2fd1-4f9d-8b70-e9ae4059f874</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.1" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Serilog" Version="4.1.0" />
   </ItemGroup>
