--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,6 +7,9 @@ COPY . ./
 
 WORKDIR /app/backend
 
+RUN mkdir -p /app/secrets
+
+
 # Restore dependencies
 RUN dotnet restore
 
@@ -16,6 +19,28 @@ RUN dotnet publish -c Release -o /publish
 # Use a lightweight runtime image for production
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
+
+
+# Install necessary packages
+RUN apt-get update && apt-get install -y \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release
+
+# Install Docker
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
+    $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    apt-get update && \
+    apt-get install -y docker-ce docker-ce-cli containerd.io
+
+# Install Google Cloud SDK
+RUN curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    apt-get update && \
+    apt-get install -y google-cloud-cli
 
 # Copy the published application from the build stage
 COPY --from=build /publish .
