Adding google cloud settings to prod appsettings

--- a/backend/Api/appsettings.json
+++ b/backend/Api/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "GoogleCloud": {
+        "Region": "west-europe3",
+        "ProjectId": "compozerr",
+        "RepositoryName": "compozerr"
     }
-  },
-  "AllowedHosts": "*"
 }
