--- a/backend/Api/appsettings.json
+++ b/backend/Api/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "GoogleCloud": {
-        "Region": "west-europe3",
+        "Region": "europe-west3",
         "ProjectId": "compozerr",
         "RepositoryName": "compozerr"
     }
