--- a/fly.backend.toml
+++ b/fly.backend.toml
@@ -8,6 +8,10 @@ primary_region = 'fra'
 
 [build]
   dockerfile = 'Dockerfile.backend'
+  
+[mounts]
+  source = 'docker_socket'
+  destination = "/var/run/docker.sock"
 
 [http_service]
   internal_port = 5000
@@ -19,3 +23,8 @@ primary_region = 'fra'
 
 [[vm]]
   size = 'shared-cpu-1x'
+
+[[volumes]]
+  region="fra"
+  name = "docker_socket"
+  size = 1
