--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Carter" Version="9.0.0" />
     <PackageReference Include="Serilog" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Humio" Version="2.0.1" />
   </ItemGroup>
 
   <PropertyGroup>
