--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.Humio" Version="2.0.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
