--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,28 @@
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*'
+    push:
+        branches:
+            - main
+        tags:
+            - "v*"
 
 jobs:
-  test:
-    if: github.event.ref == 'refs/heads/main' || github.event.ref == 'refs/tags/*'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Test
-        run: deno test
-  deploy:
-    if: github.event.ref == 'refs/tags/*'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    test:
+        if: github.event.ref == 'refs/heads/main' || github.event.ref == 'refs/tags/*'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v1
+              with:
+                  dotnet-version: "9.x"
+
+            - name: Test
+              run: dotnet test backend/Base.sln
+    deploy:
+        if: github.event.ref == 'refs/tags/*'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
