--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -4,5 +4,8 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=db;Database=myapp;Username=postgres;Password=mysecretpassword"
     }
 }
