Api fixed connection string

--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=db;Database=myapp;Username=postgres;Password=mysecretpassword"
+        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
     }
 }
