--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <ProjectReference Include="../../modules/auth/backend/Auth/Auth.csproj" />
     <ProjectReference Include="../../modules/database/backend/Database/Database.csproj" />
     <ProjectReference Include="..\..\modules\cli\backend\Cli\Cli.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
