--- a/backend/Core/Core.csproj
+++ b/backend/Core/Core.csproj
@@ -15,4 +15,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../Core.Abstractions/Core.Abstractions.csproj" />
+  </ItemGroup>
 </Project>
