In all assemblies

--- a/modules/auth/backend/Auth.Abstractions/Auth.Abstractions.csproj
+++ b/modules/auth/backend/Auth.Abstractions/Auth.Abstractions.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../../../backend/Core.Abstractions/Core.Abstractions.csproj" />
+    <ProjectReference Include="../../../../backend/Core/Core.csproj" />
   </ItemGroup>
 
 </Project>
