--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -7,5 +7,6 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
-    }
+    },
+    "AllowedOrigins": "http://localhost:1234;http://localhost:1235"
 }
