Kiota api client

--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -8,5 +8,7 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
     },
-    "AllowedOrigins": "http://localhost:1234;http://localhost:1235"
+    "Cors": {
+        "AllowedOrigins": "http://localhost:1234"
+    }
 }
