--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="../../modules/auth/backend/Auth/Auth.csproj" />
     <ProjectReference Include="../../modules/database/backend/Database/Database.csproj" />
+    <ProjectReference Include="../../modules/github/backend/Github/Github.csproj" />
     <ProjectReference Include="..\..\modules\cli\backend\Cli\Cli.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\..\modules\template\backend\Template\Template.csproj" />
