--- a/backend/Core/Core.csproj
+++ b/backend/Core/Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Carter" Version="9.0.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+    <PackageReference Include="JWT" Version="11.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Serilog" Version="4.1.0" />
