env example update

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,10 @@
-# Rename this file to .env to use
-SOMESECRET=123456
+GOOGLECLOUD_SERVICEACCOUNTCREDENTIALS=
+HUMIOINGESTTOKEN=
+FLYIO_ACCESS_TOKEN=
+GLOBAL_ACCESS_TOKEN=
+AUTH__GITHUB__CLIENT_ID=
+AUTH__GITHUB__CLIENT_SECRET=
+GITHUB__GITHUBAPP__CLIENT_ID=
+GITHUB__GITHUBAPP__CLIENT_SECRET=
+GITHUB__GITHUBAPP__APP_ID=
+GITHUB__GITHUBAPP__PRIVATE_KEY_CERTIFICATE_BASE64=
