Added cli auth with singalr

--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../modules/auth/backend/Auth/Auth.csproj" />
+    <ProjectReference Include="../../modules/cli/backend/Cli.Auth/Cli.Auth.csproj" />
     <ProjectReference Include="../../modules/database/backend/Database/Database.csproj" />
     <ProjectReference Include="../../modules/github/backend/Github/Github.csproj" />
     <ProjectReference Include="..\..\modules\cli\backend\Cli\Cli.csproj" />
