--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -9,6 +9,6 @@
         "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
     },
     "Cors": {
-        "AllowedOrigins": "http://localhost:1234"
+        "AllowedOrigins": "http://localhost:1234;http://127.0.0.1:5500"
     }
 }
