--- a/modules/cli/backend/Cli/Cli.csproj
+++ b/modules/cli/backend/Cli/Cli.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Serilog" Version="4.1.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
