--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,36 +1,50 @@
-# Stage 1: Build stage
-FROM node:18 AS build-stage
+# Stage 1: Setup and prune
+FROM node:18 AS pruner
 
+# Install turbo globally
 RUN npm install -g turbo
-# Set working directory
+
 WORKDIR /app
 
-# Copy root configuration files
-COPY package.json package-lock.json turbo.json ./
+# Copy all files needed for turbo prune
+COPY . .
 
-# Copy frontend directory
-COPY frontend ./frontend
+# Prune the monorepo for the frontend package
+RUN turbo prune frontend --docker
 
-# Create modules directory
-RUN mkdir -p modules
+# After prune, copy any additional frontend modules that might be missing
+RUN for module in $(find ./modules -name "compozerr.json" -exec dirname {} \;); do \
+    if [ -d "$module/frontend" ]; then \
+        echo "Copying additional frontend from $module"; \
+        mkdir -p "./out/full/${module}"; \
+        cp -r "$module/frontend" "./out/full/${module}/"; \
+    fi \
+done
 
-# Copy only frontend folders from modules while maintaining structure
-COPY modules/*/frontend ./modules/*/frontend
+# Stage 2: Build stage
+FROM node:18 AS builder
+
+WORKDIR /app
+
+# Copy pruned files, lockfile, and config
+COPY --from=pruner /app/out/json/ .
+COPY --from=pruner /app/out/package-lock.json ./package-lock.json
+COPY --from=pruner /app/out/full/ .
 
 # Install dependencies
 RUN npm install
 
-# Build using turbo
-RUN turbo build
+# Build the frontend
+RUN npm run build
 
-# Stage 2: Production stage
+# Stage 3: Production stage
 FROM node:18-alpine
 
 WORKDIR /app
 
 # Copy necessary files for serving
-COPY --from=build-stage /app/frontend/dist ./frontend/dist
-COPY --from=build-stage /app/frontend/package.json ./frontend/package.json
+COPY --from=builder /app/frontend/dist ./frontend/dist
+COPY --from=builder /app/frontend/package.json ./frontend/package.json
 
 # Install vite globally for serving
 RUN npm install -g vite
@@ -39,4 +53,4 @@ WORKDIR /app/frontend
 
 EXPOSE 5173
 
-CMD ["vite", "serve", "--host"]
+CMD ["vite", "serve", "--host", "0.0.0.0", "--port", "5173", "--strictPort"]
