--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,41 +1,14 @@
-# Stage 1: Setup and prune
-FROM node:18 AS pruner
-
-# Install turbo globally
+FROM node:18 AS builder
 RUN npm install -g turbo
 
 WORKDIR /app
-
-# Copy all files needed for turbo prune
 COPY . .
 
-# Prune the monorepo for the frontend package
-RUN turbo prune frontend --docker
-
-# After prune, copy any additional frontend modules that might be missing
-RUN for module in $(find ./modules -name "compozerr.json" -exec dirname {} \;); do \
-    if [ -d "$module/frontend" ]; then \
-        echo "Copying additional frontend from $module"; \
-        mkdir -p "./out/full/${module}"; \
-        cp -r "$module/frontend" "./out/full/${module}/"; \
-    fi \
-done
-
-# Stage 2: Build stage
-FROM node:18 AS builder
-
-WORKDIR /app
-
-# Copy pruned files, lockfile, and config
-COPY --from=pruner /app/out/json/ .
-COPY --from=pruner /app/out/package-lock.json ./package-lock.json
-COPY --from=pruner /app/out/full/ .
-
 # Install dependencies
-RUN npm install
+RUN npm ci
 
 # Build the frontend
-RUN npm run build
+RUN turbo build
 
 # Stage 3: Production stage
 FROM node:18-alpine
@@ -49,7 +22,7 @@ COPY --from=builder /app/frontend/package.json ./frontend/package.json
 # Install vite globally for serving
 RUN npm install -g vite
 
-WORKDIR /app/frontend
+WORKDIR /app/frontend/dist
 
 EXPOSE 5173
 
