--- a/backend/Api/appsettings.json
+++ b/backend/Api/appsettings.json
@@ -6,9 +6,10 @@
         }
     },
     "AllowedHosts": "*",
-    "GoogleCloud": {
-        "Region": "europe-west3",
-        "ProjectId": "compozerr",
-        "RepositoryName": "compozerr"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
+    },
+    "Cors": {
+        "AllowedOrigins": "http://localhost:1234;http://127.0.0.1:5500"
     }
 }
