Only copy modules including a start command

--- a/Dockerfile.modules
+++ b/Dockerfile.modules
@@ -7,7 +7,32 @@ RUN apk add --no-cache jq docker-cli docker-compose
 COPY module-runner.sh /app/
 RUN chmod +x /app/module-runner.sh
 
-# Copy modules directory
-COPY modules/ /app/modules/
+# Create a temporary directory for module filtering
+WORKDIR /tmp/modules
+
+# Copy all compozerr.json files first
+COPY modules/*/compozerr.json ./
+
+# Create script to filter and copy modules with start command
+RUN echo '#!/bin/sh\n\
+for dir in */; do \
+    if [ -f "${dir}compozerr.json" ]; then \
+        if jq -e ".start" "${dir}compozerr.json" > /dev/null 2>&1; then \
+            echo "Module ${dir%/} has start command"; \
+            mkdir -p "/app/modules/${dir%/}"; \
+            cp -r "/tmp/source/modules/${dir%/}" "/app/modules/"; \
+        fi \
+    fi \
+done' > copy-modules.sh && chmod +x copy-modules.sh
+
+# Copy source modules to temporary location
+COPY modules/ /tmp/source/modules/
+
+# Run the copy script
+RUN ./copy-modules.sh
+
+# Clean up temporary files
+WORKDIR /app
+RUN rm -rf /tmp/modules /tmp/source
 
 CMD ["/app/module-runner.sh"]
