--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,8 @@
-GOOGLECLOUD_SERVICEACCOUNTCREDENTIALS=
 HUMIOINGESTTOKEN=
-FLYIO_ACCESS_TOKEN=
-GLOBAL_ACCESS_TOKEN=
 AUTH__GITHUB__CLIENT_ID=
 AUTH__GITHUB__CLIENT_SECRET=
 GITHUB__GITHUBAPP__APP_ID=
 GITHUB__GITHUBAPP__PRIVATE_KEY_CERTIFICATE_BASE64=
-JWT__KEY=
-JWT__ISSUER=
-JWT__AUDIENCE=
+JWT__KEY=ABC
+JWT__ISSUER=Compozerr
+JWT__AUDIENCE=Compozerr_clients
