--- a/backend/Api/appsettings.json
+++ b/backend/Api/appsettings.json
@@ -5,5 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Cors": {
+        "AllowedOrigins": "http://localhost:1234;http://127.0.0.1:5500"
+    }
 }
