--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,13 +29,16 @@
     },
     "dependencies": {
         "@microsoft/kiota-bundle": "^1.0.0-preview.77",
+        "@radix-ui/react-slot": "^1.1.1",
         "@repo/auth": "*",
         "@repo/template": "*",
         "@tanstack/react-router": "^1.79.0",
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.0.6",
         "lucide-react": "^0.474.0",
+        "next-themes": "^0.4.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "tailwind-merge": "^3.0.1",
