--- a/modules/docs/package.json
+++ b/modules/docs/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "my-docs",
+  "name": "docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "dev": "docusaurus start",
+    "dev": "docusaurus start -p 1236",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
