--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "./routeTree.gen": "./src/routeTree.gen.ts"
     },
     "devDependencies": {
+        "@openapi-qraft/cli": "^2.0.1",
         "@repo/config": "*",
         "@tanstack/router-plugin": "^1.79.0",
         "@types/node": "^22.13.0",
@@ -28,11 +29,13 @@
         "vite": "^5.4.8"
     },
     "dependencies": {
-        "@microsoft/kiota-bundle": "^1.0.0-preview.77",
+        "@openapi-qraft/react": "^2.0.1",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.1",
         "@repo/auth": "*",
         "@repo/template": "*",
+        "@tanstack/react-query": "^5.66.0",
+        "@tanstack/react-query-devtools": "^5.66.0",
         "@tanstack/react-router": "^1.79.0",
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
