Settings niced up

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,10 @@
     "dependencies": {
         "@openapi-qraft/react": "^2.0.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.7",
+        "@reduxjs/toolkit": "^2.5.1",
         "@repo/auth": "*",
         "@repo/template": "*",
         "@tanstack/react-query": "^5.66.0",
