--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@openapi-qraft/react": "^2.0.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.5",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
@@ -39,7 +40,7 @@
         "@repo/template": "*",
         "@tanstack/react-query": "^5.66.0",
         "@tanstack/react-query-devtools": "^5.66.0",
-        "@tanstack/react-router": "^1.79.0",
+        "@tanstack/react-router": "^1.99.6",
         "@tanstack/router-devtools": "^1.79.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
