--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Setup .NET
               uses: actions/setup-dotnet@v1
               with:
-                dotnet-version: "9.x"
+                dotnet-version: "9.0.200"
                     
             - name: Create .env file
               run: touch backend/.env
