--- a/modules/database/backend/Database/appsettings.json
+++ b/modules/database/backend/Database/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": ""
+        "DefaultConnection": "Host=db;Database=myapp;Username=postgres;Password=mysecretpassword"
     }
 }
