--- a/backend/Api/appsettings.json
+++ b/backend/Api/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=db;Database=myapp;Username=postgres;Password=mysecretpassword"
+        "DefaultConnection": "Host=localhost;Database=myapp;Username=postgres;Password=mysecretpassword"
     },
     "Cors": {
         "AllowedOrigins": "http://localhost:1234;http://127.0.0.1:5500"
