--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,33 @@ services:
     networks:
       - app-network
 
-  module-runner:
-    build:
-      context: .
-      dockerfile: Dockerfile.modules
+  db:
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=myapp
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=mysecretpassword
     volumes:
-      - ./modules:/app/modules
-      - /var/run/docker.sock:/var/run/docker.sock
+      - postgres_data:/var/lib/postgresql/data
     restart: always
     networks:
       - app-network
-    stop_grace_period: 20s
 
+  docs:
+    build:
+      context: .
+      dockerfile: modules/docs/Dockerfile
+    ports:
+      - "1236:1236"
+    networks:
+      - app-network
+
+volumes:
+  postgres_data:
+  
 networks:
   app-network:
     driver: bridge
-    external: true
+    external: false
