--- a/modules/database/docker-compose.yml
+++ b/modules/database/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - POSTGRES_PASSWORD=mysecretpassword
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    restart: always
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
