--- a/modules/docs/docker-compose.yml
+++ b/modules/docs/docker-compose.yml
@@ -5,3 +5,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "1236:1236"
+    networks:
+      - app-network
+
+networks:
+  default:
+    name: app-network
+    external: true
