--- a/modules/docs/docker-compose.yml
+++ b/modules/docs/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   docs:
     build:
-      context: .
+      context: ${COMPOSE_DOCS_CONTEXT:-.}
       dockerfile: Dockerfile
     ports:
       - "1236:1236"
