--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "install:dep": "(npm list -g ts-node || npm install -g ts-node) > /dev/null 2>&1 && ts-node scripts/install.ts",
     "dev": "deno run --allow-all scripts/dev.ts",
+    "serve": "deno run --allow-all scripts/serve.ts",
     "deploy": "nbgv tag && git push origin --tags"
   },
   "devDependencies": {
