Persist privateKeys per run

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     ports:
       - "1235:5000"
     restart: always
+    volumes:
+      - private_keys_data:/app/privateKeys
 
 volumes:
   postgres_data:
+  private_keys_data:
